--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
 index.html
+<!DOCTYPE html>
+<head> 
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div id="container">
+        <div id="header">
+            <h1>Jane Doe</h1>
+            <h2>Master of shadows and the Internet</h2>
+        </div>
+        <div id="main-content">
+            <div id="about-section">
+                <img src="./Portfolio_Images/photo_of_me.jpg" alt="photo_of_me.">
+                <div id="about">
+                    <h2 class="small-header">About...</h2>
+                    <p>Hello! I'm an extremely driven and creative Full Stack devleopers
+                    who is currently open for career opportunities as a front-end or
+                    back-end web developer in the Greater Seattle Area.
+                    </p>
+                    <p id="second-p-about">I'm a recent graduate of Coding Dojo, a coding school located in 
+                        Bellevue, WA that teaches 3 full stacks in 3 months. I'm capable 
+                        of learning new technologies very quickly, and am always looking 
+                        for opportunities to further expand my skills and grow as a 
+                        developer. 
+                    </p>
+                    <a href="continue reading...">Continue reading...</a>
+                </div>
+            </div>
+            <div id="middle-section">
+                <div class="projects">
+                    <h2 class="small-header">La Mode</h2>
+                    <div class="sub-project">
+                        <img src="./Portfolio_Images/lamode.png" alt="la-mode">
+                        <p>La Mode is an Ecommerce website
+                            designed to market various clothing
+                            products. Users are able to view the 
+                            available garments, select their desired 
+                            quantity, and compile a shopping cart for 
+                            making a final purchase.
+                        </p>
+                    </div>    
+                    <h2 class="small-header">Technologies:</h2>
+                    <div class="icon-box">
+                        <img src="./Portfolio_Images/php.png" alt="php">
+                        <img src="./Portfolio_Images/codeigniter.png" alt="codeigniter">
+                        <img src="./Portfolio_Images/jQuery.png" alt="jQuery">
+                        <img src="./Portfolio_Images/ajax.png" alt="ajax">
+                        <img src="./Portfolio_Images/mysql.png" alt="mysql">
+                        <img src="./Portfolio_Images/HTML.png" alt="html">
+                        <img src="./Portfolio_Images/CSS.png" alt="css">
+                        <img src="./Portfolio_Images/bootstrap.png" alt="bootstrap">
+                    </div>
+                    <button>La Mode</button>
+                </div>
+                <div class="projects">
+                    <h2 class="small-header">Family Contacts</h2>
+                        <div class="sub-project">
+                            <img src="./Portfolio_Images/familycontacts.png" alt="familycontacts">
+                            <p>Family contacts is a freee application for 
+                            managaging, sharing, and visualizing your 
+                            family relationships for both extended and 
+                            immediate family. As an essential feature
+                            of the project, your log-in information
+                            determines who you can see and reveals
+                            how people are related to you.
+                            </p>
+                        </div>
+                    <h2 class="small-header">Technologies:</h2>
+                    <div class="icon-box">
+                        <img src="./Portfolio_Images/JavaScript.png" alt="js">
+                        <img src="./Portfolio_Images/mongodb.png" alt="mongodb">
+                        <img src="./Portfolio_Images/expressjs.png" alt="expressjs">
+                        <img src="./Portfolio_Images/angular.png" alt="angular">
+                        <img src="./Portfolio_Images/nodejs.png" alt="nodejs">
+                        <img src="./Portfolio_Images/HTML.png" alt="html">
+                        <img src="./Portfolio_Images/CSS.png" alt="css">
+                        <img src="./Portfolio_Images/socket.png" alt="socket">
+                    </div>
+                    <button>Family Contacts</button>
+                </div>
+                <div class="projects">
+                    <h2 class="small-header">fiveEleven</h2>
+                    <div class="sub-project">
+                        <img src="./Portfolio_Images/fiveEleven.png" alt="fiveEleven">
+                        <p>Five Eleven is a data visualization project
+                            built on Python software stack. The 
+                            application transforms the developer job- 
+                            hunt into a more visual, user friendly 
+                            experience. Based on location, technology
+                            popularity, and other vast data sets, users 
+                            may easily visualize the varying sizes and 
+                            concentrations of the junior developer job
+                            market across the nation. 
+                        </p>
+                    </div>    
+                    <h2 class="small-header">Technologies:</h2>
+                    <div class="icon-box">
+                        <img src="./Portfolio_Images/php.png" alt="php">
+                        <img src="./Portfolio_Images/django.png" alt="django">
+                        <img src="./Portfolio_Images/d3.png" alt="d3">
+                        <img src="./Portfolio_Images/angular.png" alt="angular">
+                        <img src="./Portfolio_Images/sqlite.png" alt="sqlite">
+                        <img src="./Portfolio_Images/HTML.png" alt="html">
+                        <img src="./Portfolio_Images/CSS.png" alt="css">
+                        <img src="./Portfolio_Images/JavaScript.png" alt="js">
+                        <img src="./Portfolio_Images/materialize.png" alt="materialize">                        
+                    </div>
+                    <button>fiveEleven</button>
+                </div>
+            </div>
+        </div>
+        <div id="footer">
+            <p>jdoe@gmail.com | 206-555-1212</p>
+            <div id="social-network">
+                <img src="./Portfolio_Images/github.png" alt="github" /><a href="">jaynedev</a>
+                <img src="./Portfolio_Images/linkedin.png" alt="linkedin" /><a href="">jayne-doe</a>
+                <img src="./Portfolio_Images/twitter.png" alt="twitter" /><a href="">jdtweets</a>
+                <img src="./Portfolio_Images/codepen.png" alt="codepen" /><a href="">jaynedev</a>
+            </div>
+    </div>
